Initial commit from TFS migration

--- a/.gitignore
+++ b/.gitignore
@@ -365,3 +365,4 @@ FodyWeavers.xsd
 /ChatGPT_Consumer_Api/appsettings.json
 /ChatGPT-Api/appsettings.Development.json
 /ChatGPT_Consumer_Api/appsettings.Development.json
+/path/to/tfs/metadata
